<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context=".PrecautionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="PRECAUTIONS"
                android:textAlignment="gravity"
                android:textSize="40sp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:src="@drawable/mask" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="-30dp"
                    android:text="@string/str3"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/diet" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str4"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/excerise2" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str6"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/immunity" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str7"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/sanitizer" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str8"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/socialdistance2" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str9"
                    android:textSize="20dp">

                </TextView>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:src="@drawable/travel" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str5"
                    android:textSize="20dp">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>