<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    android:orientation="vertical"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/que"
        android:layout_marginTop="30dp"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SelectedOption"
            android:id="@+id/selectedoption"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textAlignment="center">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Correct Answer"
            android:id="@+id/correctanswer"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAlignment="center">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="80dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/question"
            android:textColor="@color/black"
            android:text="@string/que1"
            android:textSize="25sp">

        </TextView>


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/firsttwooption"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingLeft="50dp"
    android:layout_marginBottom="40dp"
    android:paddingRight="50dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionA"
        android:text="@string/que1A"
        android:textAlignment="center"
        android:background="@drawable/buttondesign"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="14dp">

    </TextView>

   <Space
       android:layout_width="match_parent"
       android:layout_height="10dp">

   </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionB"
        android:text="@string/que1B"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/buttondesign"
        android:textColor="@color/black"
        android:paddingTop="14dp"
        android:paddingBottom="10dp">

    </TextView>


</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/scoreque"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:paddingTop="10dp"/>



    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_gravity="bottom"
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal">

    </ProgressBar>



</LinearLayout>



</LinearLayout>